--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- menu encabezado -->
     <header class="header">
         <img class="bg" src="img\bg.png" alt="">
         <div class="menu_container">
@@ -44,13 +45,215 @@
                     </li>
                 </ul>
             </div>
-
         </div>
-        <div>
-            
+        <div class="header-content container">
+            <div class="header-txt">
+                <h1><span>Bienvenido</span> disfruta de nuestros platillos</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet laboriosam alias eligendi, veritatis saepe et, iure quae doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
+                </p>
+                <a href="#" class="btn-1">Informacion</a>
+                <div class="header-img">
+                    <img src="img\pl-1.png" alt="">
+                </div>
+
+            </div>
         </div>
     </header>
 
+           <!-- Desayunos -->
+
+    <section class="breakfast container">
+        <h2>Desayunos</h2>
+        <p>
+            Horario 9am - 11pm
+        </p>
+        <div class="breakfast-content">
+            <div class="breakfast-1">
+                <img src="img\b1.png" alt="">
+                <h3>Platillo 1</h3>
+            </div>
+            <div class="breakfast-1">
+                <img src="img\b2.png" alt="">
+                <h3>Platillo 2</h3>
+            </div>
+            <div class="breakfast-1">
+                <img src="img\b3.png" alt="">
+                <h3>Platillo 3</h3>
+            </div>
+            <div class="breakfast-1">
+                <img src="img\b4.png" alt="">
+                <h3>Platillo 4</h3>
+            </div>
+
+        </div>
+    </section>
+
+<!-- productos -->
+
+    <section class="info">
+        <img class="bg-2" src="img\bg-2.png" alt="">
+        <div class="info-content container">
+            <div class="info-img">
+                <img src="img\breakfast.png" alt="">
+            </div>
+            <div class="info-txt">
+                <h2> La mejor calidad en los productos </h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum consequatur in culpa neque autem obcaecati hic odio laudantium, distinctio libero dolorem quae iure possimus. Atque ea reprehenderit repellendus dolor aperiam.
+                </p>
+                <a href="#" class="btn-1"> Informacion </a>
+            </div>
+        </div>
+    </section>
+
+
+    <main class="products container">
+        <h2>Productos</h2>
+        <div class="box-container" id="lista-1">
+            <div class="box">
+                <img src="img\pla1.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="1">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla2.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="2">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla3.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="3">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla4.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="4">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla1.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="5">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla2.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="6">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla3.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="7">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="box">
+                <img src="img\pla4.png" alt="">
+                <div class="product-txt">
+                    <h3>Paeya</h3>
+                    <p>calidad premium</p>
+                    <p class="precio">$35.000</p>
+                    <a href="#" class="agregar-carrito btn-3" data-id="8">Agregar al carrito</a>
+                </div>
+            </div>
+        </div>
+        <div class="btn-2" id="load-more">Cargar Mas</div>
+
+    </main>
+
+    <!-- nuestra app -->
+
+    <section class="app container">
+        <div class="app-txt">
+            <h2>Descarga nuestra APP descubre ofertas</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe porro maxime, suscipit cum recusandae doloribus rem laudantium ratione quibusdam possimus minima, beatae omnis eligendi tempora sit, delectus facilis nostrum cupiditate!
+            </p>
+            <div class="descarga">
+                <img src="img\store1.png" alt="">
+                <img src="img\store2.png" alt="">
+            </div>
+        </div>
+        <div class="app-img">
+            <img src="img\app.png" alt="">
+        </div>
+    </section>
+             <!-- footer -->
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>        
+            </div>
+
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>        
+            </div>
+
+            <div class="link">
+                <h3>lorem</h3>
+                <ul>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                    <li><a href="#">lorem</a></li>
+                </ul>        
+            </div>
+
+            <div class="link">
+                <h3>lorem</h3>
+                <div class="descarga">
+                    <img src="img\store1.png" alt="">
+                    <img src="img\store2.png" alt="">
+                </div>                    
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
