--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- menu encabezado -->
     <header class="header">
         <img class="bg" src="img\bg.png" alt="">
-        <div class="menu_container">
+        <div class="menu container">
             <a href="#" class="logo">Logo</a>
             <input type="checkbox" id="menu">
             <label for="menu">
@@ -21,7 +21,7 @@
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Servicios</a></li>
                     <li><a href="#">Productos</a></li>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
             <div>
@@ -40,7 +40,7 @@
                                 </thead>
                                 <tbody></tbody>
                             </table>
-                            <a href="#" id="vaciar-carrito" class="btn-3">vaciar Carrito</a>
+                            <a href="#" id="vaciar-carrito" class="btn-3"> vaciar carrito</a>
                         </div>
                     </li>
                 </ul>
@@ -48,16 +48,19 @@
         </div>
         <div class="header-content container">
             <div class="header-txt">
-                <h1><span>Bienvenido</span> disfruta de nuestros platillos</h1>
+                <h1> <span>Bienvenido</span> disfruta de nuestros platillos </h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet laboriosam alias eligendi, veritatis saepe et, iure quae doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet laboriosam alias eligendi, veritatis saepe et, iure quae doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
+                    doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
+                    
                 </p>
                 <a href="#" class="btn-1">Informacion</a>
-                <div class="header-img">
-                    <img src="img\pl-1.png" alt="">
-                </div>
-
             </div>
+            <div class="header-img">
+                <img src="img\pl-1.png" alt="">
+            </div>
+
         </div>
     </header>
 
