--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="app-txt">
             <h2>Descarga nuestra APP descubre ofertas</h2>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe porro maxime, suscipit cum recusandae doloribus rem laudantium ratione quibusdam possimus minima, beatae omnis eligendi tempora sit, delectus facilis nostrum cupiditate!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe porro maxime, suscipit cum recusandae doloribus rem laudantium ratione quibusdam possimus minima, beatae omnis eligendi tempora sit, delectus facilis nostrum cupiditate!laudantium, distinctio libero dolorem quae iure possimus. Atque ea reprehenderit repellendus dolor aperiam.
             </p>
             <div class="descarga">
                 <img src="img\store1.png" alt="">
