--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- menu encabezado -->
-    <header class="header">
+    <header class="header" id="inicio">
         <img class="bg" src="img\bg.png" alt="">
         <div class="menu container">
             <a href="#" class="logo">Logo</a>
@@ -18,10 +18,10 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#Inicio">Inicio</a></li>
+                    <li><a href="#Desayunos">Desayunos</a></li>
+                    <li><a href="#Productos">Productos</a></li>
+                    <li><a href="#Contacto">Contacto</a></li>
                 </ul>
             </nav>
             <div>
@@ -66,7 +66,7 @@
 
            <!-- Desayunos -->
 
-    <section class="breakfast container">
+    <section class="breakfast container" id="Desayunos">
         <h2>Desayunos</h2>
         <p>
             Horario 9am - 11pm
@@ -94,7 +94,7 @@
 
 <!-- productos -->
 
-    <section class="info">
+    <section class="info" id="Productos">
         <img class="bg-2" src="img\bg-2.png" alt="">
         <div class="info-content container">
             <div class="info-img">
@@ -216,7 +216,7 @@
         </div>
     </section>
              <!-- footer -->
-    <footer class="footer">
+    <footer class="footer" id="Contacto">
         <div class="footer-content container">
             <div class="link">
                 <h3>lorem</h3>
