botones registrar e ingresar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                     doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
                     
                 </p>
-                <a href="#" class="btn-1">Informacion</a>
+                <a href="#" class="btn-register">Registrate</a>
+                <a href="#" class="btn-login">Ingresa</a>
             </div>
             <div class="header-img">
                 <img src="img\pl-1.png" alt="">
@@ -215,6 +216,7 @@
             <img src="img\app.png" alt="">
         </div>
     </section>
+
              <!-- footer -->
     <footer class="footer" id="Contacto">
         <div class="footer-content container">
@@ -255,6 +257,11 @@
                     <img src="img\store2.png" alt="">
                 </div>                    
             </div>
+        </div>
+        <div>
+            <a href="#inicio" class="arriba">
+                <i class="fa-solid fa-angles-up"></i>
+            </a>
         </div>
     </footer>
 
