footer iconos y adress

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3f8094d084.js" crossorigin="anonymous"></script>
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -219,49 +220,47 @@
 
              <!-- footer -->
     <footer class="footer" id="Contacto">
-        <div class="footer-content container">
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>        
-            </div>
-
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>        
-            </div>
-
-            <div class="link">
-                <h3>lorem</h3>
-                <ul>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                    <li><a href="#">lorem</a></li>
-                </ul>        
-            </div>
-
-            <div class="link">
-                <h3>lorem</h3>
-                <div class="descarga">
-                    <img src="img\store1.png" alt="">
-                    <img src="img\store2.png" alt="">
-                </div>                    
-            </div>
+        <div class="logo-f">
+            <img src="img\IMG-20230611-WA0004.jpg" alt="">
         </div>
-        <div>
-            <a href="#inicio" class="arriba">
-                <i class="fa-solid fa-angles-up"></i>
-            </a>
+        <div class="contain-main-footer">
+            <div class="contact">
+                <h4>Datos de contacto</h4>
+                <address>
+                    <ul>
+                        <li>
+                            <i>kr 22 17-28</i>
+                        </li>
+                        <li>
+                            <i><a href="mailto:ricmtz15@gmail.com">ricmtz15@gmail.com</a></i>
+                        </li>
+                        <li>
+                            <i>Guadalajara, Jal.</i>
+                        </li>
+                        <li>
+                            <i>+52 3314662888</i>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="descarga">
+                <h4>Descarga APP</h4>
+                <h4>Siguenos</h4>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-whatsapp"></i>
+                <!-- <img src="img\store1.png" alt="">
+                <img src="img\store2.png" alt=""> -->
+                
+            </div> 
+            <div class="location">
+                <h4>Ubicacion</h4>
+            </div>
+                       
+        </div>
+        <div class="copy-right">
+            <span>© Copyrigh 2023 | Sitio creado y administrado por  ALXPE S.A</span>
         </div>
     </footer>
 
