--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="#Contacto">Contacto</a></li>
                 </ul>
             </nav>
+            <a href="registroeingreso.html" class="btn-ingreso">Ingreso de Cliente</a>
             <div>
                 <ul>
                     <li class="submenu">
@@ -56,8 +57,9 @@
                     doloribus fugiat libero esse aliquam possimus ratione est excepturi modi quidem nulla eveniet.
                     
                 </p>
-                <a href="#" class="btn-register">Registrate</a>
-                <a href="#" class="btn-login">Ingresa</a>
+                
+                <!-- <button type="button" class="btn-register">Registrate</button>
+                <button class="btn-login">Ingresa</button> -->
             </div>
             <div class="header-img">
                 <img src="img\pl-1.png" alt="">
@@ -65,6 +67,7 @@
 
         </div>
     </header>
+  
 
            <!-- Desayunos -->
 
